         Contributed by Neal Mi.
       - OAuth extension has been upgraded to support final OAuth 2.0 specification.
         Contributed by Shotaro Uchida.
    - Bug fixed
       - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
         Reported by Mark Kharitonov.
       - Fixed issue #774 - Removed default support of JavaBeans XML-serialization.
         Reported by David Jorm, Dinis Cruz, Abraham Kang and Alvaro Munoz. 
- 2.2 Milestone 3 (03/07/2013)
    - Bug fixed
       - Fixed issue #737 - ExecutorService not set when calling WriterRepresentation#write.
         Reported by Tim Peierls.
       - Fixed issue #734 - Implementations of XmlHttpRequest in IE versions prior to IE10 turn 
         204 status into 1223. Reported by Koen Maes.

- 2.2 Milestone 2 (02/28/2013)
    - Enhancements
       - Upgraded Servlet API to version 3.0.1.
       - Updated Simple HTTP server library to version 5.0.4.
       - Added a JSONP filter that can automatically wrap JSON representations.
         Contributed by Mark Kharitonov and Cyril Lakech.
    - API changes
       - Refactored the OAuth extension to prevent the 
         org.restlet.ext.oauth.security subpackage.
       - Refactored the JacksonRepresentation to merge the 
         JacksonSmileRepresentation back into the 
         JacksonRepresentation. Also improved extensibility
         and default behavior of the CSV serialization format.
       - Added Request/Response.flushBuffers() method to attempt
         to force network buffers to be flushed out.
         Suggested by Yan Pujante.
       - Removed all code deprecated in branch 2.1.
       - Added patch-related methods to the ConverterService:
         applyPatch(Representation original, Representation patch) : Representation
         revertPatch(Representation modified, Representation patch) : Representation
         createPatch(Representation original, Representation modified) : Representation