@@ -13,7 +13,10 @@ Changes log
        - Fixed issue #739 - copy extension headers from JAX-RS api to restlet response.
          Reported by Mark Kharitonov.
        - Fixed issue #774 - Removed default support of JavaBeans XML-serialization.
-         Reported by David Jorm, Dinis Cruz, Abraham Kang and Alvaro Munoz. 
+         Reported by David Jorm, Dinis Cruz, Abraham Kang and Alvaro Munoz.
+       - Fixed issue #778 - Removed default support of JavaBeans binary-serialization.
+         Reported by David Jorm.
+
 - 2.2 Milestone 3 (03/07/2013)
     - Bug fixed
        - Fixed issue #737 - ExecutorService not set when calling WriterRepresentation#write.
